--- a/templates/index.html
+++ b/templates/index.html
@@ -18,23 +18,29 @@
                 style="font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; font-size: 5rem; text-align: center;">
                 FAVQUOTES </h1>
         </div>
-            <div style="margin: 1rem 2rem; display:block">
-                <a class="btn btn-dark" href="{{ url_for('quotes')}}">+ Add a quote</a>
-            </div>
+        <div style="margin: 1rem 2rem; display:block">
+            <a class="btn btn-dark" href="{{ url_for('quotes')}}">+ Add a quote</a>
+        </div>
         <div style="padding: 0rem 2rem;">
             <!-- for Loop starts -->
             {% for r in result %}
-            <div style="margin: 1rem 0rem">
-                <div
-                    style="color:white;font-size:28px;background-color:black; margin: 0.5rem 0rem;border-radius: 1rem;padding:0.8rem 0.2rem 0.1rem 0.8rem;">
-                    <h1 style=" font-size:1.8rem; font-family:Georgia, 'Times New Roman', Times, serif;font-weight: 600;">
-                        {{r.author}} </h1>
-                </div>
-                <div
-                    style="color:rgb(32, 30, 30);border-style: solid;border-color: black;border-radius: 1rem;padding: 0.1rem 1rem;">
-                    <p  style="font-size:1.5rem; font-family:serif"> {{r.quote}} </p>
-                </div>
+            <div style="border:1px solid black;display:inline-block;text-align:end; position: relative; top: 1.4rem;left: -1rem; background-color: rgb(255, 255, 255); padding: 0rem 0.6rem; border-radius: 10px;">
+                <a href="/delete/{{r.id}}" style="text-decoration: none; padding: 0rem; color: #000000;"> x </a>
             </div>
+            <a href="/update/{{r.id}}" style="display: block; text-decoration: none;">
+                <div style="margin:0rem 0rem 1rem 0rem;">
+                    <div
+                        style="color:white;font-size:28px;background-color:black; margin: 0.5rem 0rem;border-radius: 1rem;padding:0.8rem 0.2rem 0.1rem 0.8rem;">
+                        <h1
+                            style=" font-size:1.8rem; font-family:Georgia, 'Times New Roman', Times, serif;font-weight: 600;">
+                            {{r.author}} </h1>
+                    </div>
+                    <div
+                        style="color:rgb(32, 30, 30);border-style: solid;border-color: black;border-radius: 1rem;padding: 0.1rem 1rem;">
+                        <p style="font-size:1.5rem; font-family:serif"> {{r.quote}} </p>
+                    </div>
+                </div>
+            </a>
             {% endfor %}
             <!-- for Loop ends here -->
         </div>
