--- a/templates/update.html
+++ b/templates/update.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width-device-width, initial-scale=1">
-    <title>Update your quote</title>
+    <title>Favquotes - Update your quote</title>
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="{{ url_for('static',filename='bootstrap.min.css') }}">
